--- a/requirements.txt
+++ b/requirements.txt
@@ -64,6 +64,7 @@ psutil==6.0.0
 psycopg2-binary==2.9.10
 pure-eval==0.2.2
 pycparser==2.21
+PyJWT==2.8.0
 pyee==11.1.0
 Pygments==2.18.0
 pymongo==4.6.1
