requirements wrong hyphens

--- a/requirements.txt
+++ b/requirements.txt
@@ -32,8 +32,8 @@ Flask-WTF
 fonttools==4.53.0
 greenlet==3.1.1
 gunicorn==23.0.0
-google‑auth>=2.20.0
-google‑auth‑httplib2>=0.1.0
+google-auth>=2.20.0
+google-auth-httplib2>=0.1.0
 h11==0.14.0
 idna==3.4
 importlib_metadata==8.2.0
