--- a/requirements.txt
+++ b/requirements.txt
@@ -1,109 +1,39 @@
-appdirs==1.4.4
-asttokens==2.4.1
-attrs==23.2.0
-beautifulsoup4==4.12.2
-blinker==1.8.2
-boto3==1.35.32
-botocore==1.35.32
-bs4==0.0.2
-certifi==2023.5.7
-cffi==1.16.0
-charset-normalizer==3.2.0
-click==8.1.7
-colorama==0.4.6
-comm==0.2.2
-contourpy==1.2.1
-cssselect==1.2.0
-cycler==0.12.1
-debugpy==1.8.1
-decorator==5.1.1
-distlib==0.3.7
-dnspython==2.4.2
-executing==2.0.1
-fake-useragent==1.5.1
-filelock==3.13.1
-Flask
-Flask-CAS
-Flask-Dance
-Flask-Mail
-Flask-SQLAlchemy
-Flask-Migrate
-Flask-WTF
-fonttools==4.53.0
-greenlet==3.1.1
-gunicorn==23.0.0
-google-api-python-client>=2.70.0
-google-auth>=2.20.0
-google-auth-oauthlib>=1.0.0
-google-auth-httplib2>=0.1.0
-h11==0.14.0
-idna==3.4
-importlib_metadata==8.2.0
-ipykernel==6.29.4
-ipython
+alembic==1.17.1
+blinker==1.9.0
+boto3==1.40.71
+botocore==1.40.71
+cachetools==6.2.1
+certifi==2025.11.12
+charset-normalizer==3.4.4
+click==8.3.0
+Flask==3.1.2
+Flask-Migrate==4.1.0
+Flask-SQLAlchemy==3.1.1
+google-api-core==2.28.1
+google-api-python-client==2.187.0
+google-auth==2.43.0
+google-auth-httplib2==0.2.1
+googleapis-common-protos==1.72.0
+httplib2==0.31.0
+idna==3.11
 itsdangerous==2.2.0
-jedi==0.19.1
-Jinja2==3.1.4
+Jinja2==3.1.6
 jmespath==1.0.1
-jupyter_client==8.6.2
-jupyter_core==5.7.2
-kiwisolver==1.4.5
-lxml==5.2.2
-lxml_html_clean==0.2.0
-MarkupSafe==2.1.5
-matplotlib==3.9.0
-matplotlib-inline==0.1.7
-nest-asyncio==1.6.0
-networkx
-numpy==1.26.4
-outcome==1.3.0.post0
-packaging==24.1
-pandas==2.2.2
-parse==1.20.2
-parso==0.8.4
-pillow==10.3.0
-pipenv==2023.11.15
-platformdirs==3.11.0
-prompt_toolkit==3.0.47
-psutil==6.0.0
-psycopg2-binary==2.9.10
-pure-eval==0.2.2
-pycparser==2.21
-pyee==11.1.0
-Pygments==2.18.0
-pymongo==4.6.1
-pyparsing==3.1.2
-pyppeteer==2.0.0
-pyquery==2.0.0
-PySocks==1.7.1
+Mako==1.3.10
+MarkupSafe==3.0.3
+proto-plus==1.26.1
+protobuf==6.33.0
+pyasn1==0.6.1
+pyasn1_modules==0.4.2
+pyparsing==3.2.5
 python-dateutil==2.9.0.post0
-python-dotenv==1.0.0
-pytz==2024.1
-pyzmq==26.0.3
-requests==2.31.0
-requests-html==0.10.0
-s3transfer==0.10.2
-selenium==4.26.1
-six==1.16.0
-sniffio==1.3.0
-sortedcontainers==2.4.0
-soupsieve==2.5
-SQLAlchemy==2.0.38
-stack-data==0.6.3
-tornado==6.4.1
-tqdm==4.66.5
-traitlets==5.14.3
-trio==0.24.0
-trio-websocket==0.11.1
-typing_extensions==4.12.2
-tzdata==2024.1
-urllib3==1.26.19
-virtualenv==20.24.6
-w3lib==2.2.1
-wcwidth==0.2.13
-webdriver-manager==4.0.2
-websocket-client==1.8.0
-websockets==10.4
-Werkzeug==3.0.3
-wsproto==1.2.0
-zipp==3.19.2
+pytz==2025.2
+requests==2.32.5
+rsa==4.9.1
+s3transfer==0.14.0
+six==1.17.0
+SQLAlchemy==2.0.44
+typing_extensions==4.15.0
+uritemplate==4.2.0
+urllib3==2.5.0
+Werkzeug==3.1.3
