--- a/requirements.txt
+++ b/requirements.txt
@@ -9,6 +9,7 @@ click==8.3.0
 Flask==3.1.2
 Flask-Migrate==4.1.0
 Flask-SQLAlchemy==3.1.1
+gunicorn
 google-api-core==2.28.1
 google-api-python-client==2.187.0
 google-auth==2.43.0
