--- a/requirements.txt
+++ b/requirements.txt
@@ -12,8 +12,9 @@ Flask-SQLAlchemy==3.1.1
 gunicorn
 google-api-core==2.28.1
 google-api-python-client==2.187.0
-google-auth==2.43.0
+google-auth==2.41.1
 google-auth-httplib2==0.2.1
+google-auth-oauthlib==1.2.3
 googleapis-common-protos==1.72.0
 httplib2==0.31.0
 idna==3.11
@@ -22,14 +23,17 @@ Jinja2==3.1.6
 jmespath==1.0.1
 Mako==1.3.10
 MarkupSafe==3.0.3
+oauthlib==3.3.1
 proto-plus==1.26.1
 protobuf==6.33.0
+psycopg2==2.9.11
 pyasn1==0.6.1
 pyasn1_modules==0.4.2
 pyparsing==3.2.5
 python-dateutil==2.9.0.post0
 pytz==2025.2
 requests==2.32.5
+requests-oauthlib==2.0.0
 rsa==4.9.1
 s3transfer==0.14.0
 six==1.17.0
